--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@drawable/cloud" />
+    <TextView
+        android:layout_width="310dp"
+        android:layout_height="100dp"
+        android:text="와랑와랑"
+        android:textSize="100sp"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/black"
+        android:fontFamily="@font/tadak"
+        />
 
     <ImageView
         android:id="@+id/bear"
