--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -1,52 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lo_canvas"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExerciseActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fb_pen"
-        android:layout_width="wrap_content"
+    <ImageButton
+        android:id="@+id/preBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/pre"
+        android:background="@color/white"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="270dp"
+        tools:layout_editor_absoluteY="56dp"
+        android:layout_gravity="center|top"
+        android:layout_marginRight="170dp"
+        android:layout_marginTop="25dp"
+        />
+
+    <TextView
+        android:id="@+id/txt"
+        android:layout_gravity="center|top"
+        android:fontFamily="@font/maple"
+        android:layout_width="235dp"
         android:layout_height="wrap_content"
-        android:elevation="8dp"
-        android:layout_marginBottom="15dp"
-        app:fabSize="mini"
-        android:src="@drawable/ic_baseline_create_24"
-        app:layout_constraintBottom_toTopOf="@id/fb_eraser"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_marginTop="30dp"
+        android:background="#FFF8B8"
+        android:gravity="center"
+        android:textSize="30sp"
+        tools:ignore="HardcodedText,MissingConstraints"
+        tools:layout_editor_absoluteX="380dp"
+        tools:layout_editor_absoluteY="75dp"
+        />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fb_eraser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="8dp"
-        android:layout_marginBottom="15dp"
-        android:src="@drawable/ic_baseline_auto_fix_normal_24"
-        app:fabSize="mini"
-        app:layout_constraintBottom_toTopOf="@id/fb_clear"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.76" />
+    <ImageButton
+        android:id="@+id/nextBtn"
+        android:layout_marginStart="170dp"
+        android:layout_marginTop="25dp"
+        android:layout_gravity="center|top"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitCenter"
+        android:background="@color/white"
+        android:src="@drawable/next"
+        tools:ignore="MissingConstraints"
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fb_clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="8dp"
-        android:src="@drawable/ic_baseline_delete_forever_24"
-        app:fabSize="mini"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lo_canvas"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        android:layout_width="match_parent">
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fb_pen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:layout_marginBottom="15dp"
+            app:fabSize="mini"
+            android:src="@drawable/ic_baseline_create_24"
+            app:layout_constraintBottom_toTopOf="@id/fb_eraser"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fb_eraser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:layout_marginBottom="15dp"
+            android:src="@drawable/ic_baseline_auto_fix_normal_24"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toTopOf="@id/fb_clear"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_bias="0.76" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fb_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:src="@drawable/ic_baseline_delete_forever_24"
+            app:fabSize="mini"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.9"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
